syntax = "proto3";

option csharp_namespace = "Report.Grpc";

package report;

// ==== Definition ====
service ReportGrpc {
	rpc PutDashboardTotal (PutDashboardTotalRequest) returns (PutDashboardTotalResponse);
}

// ==== Messages ====

message Order {
	string id = 1;
	string name = 2;
	double price = 3;
	string thumbnail = 4;
}

message PutDashboardTotalRequest {
	string search_text = 1;
	repeated string ids = 2;
}

message PutDashboardTotalResponse {
  repeated Product products = 1;
}